  * improvement: on x86/x86-64 Lisp call frames now have the same layout as C
    frames, allowing for instance more reliable backtraces.
  * optimization: faster local calls on x86/x86-64
  * minor incompatible changes: echo-streams now propagate unread-char to the
    underlying input stream, and no longer permit unreading more than one
    character.

changes in sbcl-1.0.27 relative to 1.0.26:
  * new port: support added for x86-64 OpenBSD. (thanks to Josh Elsasser)
  * new port: support added for x86-64 Solaris. (thanks to Alex Viskovatoff)
  * improvement: the system either recovers from stack exhaustion or dies
    properly as opposed to leaving the user uncertain of whether the handler
    trampled on some random memory next to the stack or having to rely on
    --lose-on-corruption (which is still a good idea to use in production
    because stack exhaustion can happen in signal handlers which will likely
    lead to hangs.)
  * bug fix: fix gc related interrupt handling bug on ppc (regression from
    1.0.25.37, reported by Harald Hanche-Olsen)
  * bug fix: work around signal delivery bug in darwin (regression from
    1.0.25.44, reported by Sidney Markowitz)
  * bug fix: fix ERROR leaking memory (reported by David Thompson)

changes in sbcl-1.0.26 relative to 1.0.25:
  * incompatible change: an interruption (be it a function passed to
    INTERRUPT-THREAD or a timer function) runs in an environment where
    interrupts can be enabled. The interruption can use
    WITH-INTERRUPTS or WITHOUT-INTERRUPTS as it sees fit. Use
    WITHOUT-INTERRUPTS to avoid nesting of interruptions and
    potentially running out of stack. Keep in mind that in the absence
    of WITHOUT-INTERRUPTS some potentially blocking operation such as
    acquiring a lock can enable interrupts.
  * incompatible change: GC-OFF and GC-ON are removed, as they were
    always unsafe. Use WITHOUT-GCING instead.
  * new feature: runtime option --disable-ldb