@@ -455,7 +455,7 @@ like *STACK-TOP-HINT* and unsupported stuff like *TRACED-FUN-LIST*."
                "INVALID-CONTROL-STACK-POINTER" "INVALID-VALUE"
                "LAMBDA-LIST-UNAVAILABLE" "MAKE-BREAKPOINT" "NO-DEBUG-BLOCKS"
                "NO-DEBUG-FUN-RETURNS" "NO-DEBUG-INFO" "PREPROCESS-FOR-EVAL"
-               "RETURN-FROM-FRAME" "SOURCE-PATH-CONTEXT"
+               "EVAL-IN-FRAME" "RETURN-FROM-FRAME" "SOURCE-PATH-CONTEXT"
                "TOP-FRAME" "UNHANDLED-DEBUG-CONDITION" "UNKNOWN-CODE-LOCATION"
                "UNKNOWN-CODE-LOCATION-P" "UNKNOWN-DEBUG-VAR"
                "CODE-LOCATION-KIND" "FLUSH-FRAMES-ABOVE"))
