@@ -11,6 +11,8 @@ changes in sbcl-1.0.28 relative to 1.0.27:
   * minor incompatible changes: echo-streams now propagate unread-char to the
     underlying input stream, and no longer permit unreading more than one
     character.
+  * improvement: the debugger REPL can now reference lexical variables
+    by name directly for code compiled with (DEBUG 3).
 
 changes in sbcl-1.0.27 relative to 1.0.26:
   * new port: support added for x86-64 OpenBSD. (thanks to Josh Elsasser)
